# fuelnearme

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  helpers.py  main.py  pipeline.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
airflow/: Dockerfile
app/: Dockerfile  db.py  main.py  metrics.py  requirements.txt
dags/: fuelnearme_pipeline.py
extract/: Dockerfile  fetch.py  main.py
fnme/: cli.py  constants.py  data.py  exceptions.py  geo.py  station.py
fnme/core/: data.py  geo.py  station.py
fnme/db/: connection.py  query.py  schema.py
load/: Dockerfile  ingest.py  main.py  query.py  requirements.txt  schema.py
secrets/: .gitignore  client_id.txt.example  client_secret.txt.example  database_url.txt.example
tests/: test_cli.py  test_core_geo.py  test_exception.py  test_metrics.py  test_schema.py
tests/app/: conftest.py  test_db.py
tests/core/: test_data.py  test_geo.py  test_station.py
tests/dags/: test_fuelnearme_pipeline.py
tests/extract/: test_fetch.py  test_main.py
tests/load/: conftest.py  test_ingest.py  test_main.py  test_schema.py
transform/: Dockerfile  dbt_project.yml  profiles.yml
transform/models/marts/: dim_stations.sql  fct_fuel_prices.sql  schema.yml
transform/models/staging/: schema.yml  stg_fuel_prices.sql  stg_stations.sql
