[project]
name = "fnme"
version = "0.1.0"
description = "Find cheap(er) fuel near you using the official Fuel Finder service provided by the UK government"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopy>=2.4.1",
    "pandas>=3.0.2",
    "requests>=2.33.1",
    "numpy>=2.4.4",
    "tabulate>=0.10.0",
    "platformdirs>=4.9.6",
]

[project.scripts]
fnme = "fnme.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fnme"]

[tool.ruff]
line-length = 79
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
