[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fnme-cli"
version = "0.1.0"
description = "Find cheap(er) fuel near you using the official Fuel Finder service provided by the UK government"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopy>=2.4.1",
    "pandas>=3.0.2",
    "requests>=2.33.1",
    "numpy>=2.4.4",
    "tabulate>=0.10.0",
    "platformdirs>=4.9.6",
]

[project.optional-dependencies]
# Only needed to run the Streamlit app locally; the CLI does not use these.
app = [
    "streamlit>=1.58.0",
    "pydeck>=0.9.2",
    "sqlalchemy>=2.0.51",
    "psycopg2-binary>=2.9.12",
    "streamlit-geolocation>=0.0.5",
]

[project.scripts]
fnme-cli = "fnme.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fnme"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# Embedded SQL strings read clearest inline, even past the line limit.
"load/ingest.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--import-mode=importlib"

[dependency-groups]
dev = [
    "coverage>=7.14.1",
    "dbt-postgres>=1.10.1",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "testcontainers[postgres]>=4.14.2",
    "sqlalchemy>=2.0.51",
    "psycopg2-binary>=2.9.12",
]
